# omdw-vala

./: .gitignore  README.md  meson.build  scripts.sh  uncrustify.cfg
.hooks/: pre-commit.sh
docs/: Hacking.md
omdw-core/: meson.build  setup.vala
omdw-core/src/: Task.Lexer.deserialize.vala  Task.Lexer.serialize.vala  Task.Lexer.vala  Task.Status.vala  Task.Struct.vala  meson.build
omdw-core/src/helpers/: ArrayList.Diff.vala  ArrayList.vala  ArrayListString.vala  CoreServices.vala  DeclareServices.vala  ProcessSpawnService.vala  Time.FormatSeconds.vala  meson.build
omdw-core/src/helpers/utils/: MakeFileCopyFromURI.vala
omdw-core/src/interfaces/: Database.vala  Format.Struct.Lexer.vala  Format.Struct.Utils.vala  Format.Struct.vala  Formats.Struct.vala  Task.Struct.Lexer.vala  Task.Struct.vala  meson.build
omdw-core/src/services/: AppRepository.Local.vala  Database.Memory.vala  TaskRepository.vala  meson.build
omdw-core/src/services/MediaController/: SingleInfo.FromURL.vala  SingleInfo.Struct.Lexer.vala  SingleInfo.Struct.vala  ValidateRequest.FromURL.vala  ValidateRequest.Struct.Lexer.vala  ValidateRequest.Struct.vala  meson.build
omdw-core/src/utils/: Process.Spawn.Sync.vala  Process.Spawn.WithPipes.vala  Process.Spawn.build_spawn_args.vala  ProcessSpawnService.vala  _DeclareServices.vala  meson.build
omdw-gui/: meson.build
omdw-gui-gtk/: main.vala  meson.build
omdw-gui-gtk/resources/: io.github.guesant.omdw.gresource.xml
omdw-gui-gtk/resources/ui/: dashboard-menu.ui  dashboard.ui
omdw-gui-gtk/src/: Application.vala  meson.build
omdw-gui-gtk/src/Components/: meson.build
omdw-gui-gtk/src/Components/Dialogs/: Analyzing.vala  TipClipboardUsage.vala  meson.build
omdw-gui-gtk/src/Components/Dialogs/Analyzing/: Analyzing.vala
omdw-gui-gtk/src/Components/Pages/: Dashboard.vala  meson.build
omdw-gui-gtk/src/Components/Pages/DashBoard/: DashBoardSignals.vala  DashBoardSkeleton.vala  Dashboard.vala  meson.build
omdw-gui-gtk/src/Components/Partials/: meson.build
omdw-gui-gtk/src/Components/Partials/AboutMedia/: AboutMedia.vala  AboutMediaInfo.vala  meson.build
omdw-gui-gtk/src/Components/Partials/AboutMedia/AboutMediaInfo/: AboutMediaInfoActive.vala  AboutMediaInfoDone.vala  AboutMediaInfoOverview.vala  AboutMediaInfoSkeleton.vala  AboutMediaInfoStopped.vala  meson.build
omdw-gui-gtk/src/Components/Partials/InfoContainer/: InfoContainer.vala  meson.build
omdw-gui-gtk/src/Helpers/: PixbufFromURL.vala  meson.build
omdw-gui-gtk/src/Services/: Clipboard.vala  Component.vala  EventBus.vala  FileSystem.vala  GenericComponent.vala  Store.vala  meson.build
omdw-gui/resources/: omdw.gresource.xml
omdw-gui/src/: omdw.vala
scripts/: pre-commit.sh
