project('omdw', 'vala', 'c')

gnome = import('gnome')

# START DEPENDENCIES
gee_dep = dependency('gee-0.8')
json_dep = dependency('json-glib-1.0')

gio_dep = dependency('gio-2.0')
glib_dep = dependency('glib-2.0')
gmodule_dep = dependency('gmodule-2.0')
# END DEPENDENCIES

subdir('omdw-core')
subdir('omdw-gui')