project('io.github.guesant.omdw', 'vala', 'c')

# START DEPENDENCIES
gee_dep = dependency('gee-0.8')
gio_dep = dependency('gio-2.0')
gtk_dep = dependency('gtk+-3.0')
json_dep = dependency('json-glib-1.0')
gmodule_dep = dependency('gmodule-2.0')
# END DEPENDENCIES

gnome = import('gnome')

subdir('omdw-core')
subdir('omdw-gui-gtk')