core_utils_sources = []

core_utils_sources += files(
  'ArrayListString.vala',
  'ArrayList.vala',
)

core_utils_sources += files(
  'DeclareServices.vala',
  'ProcessSpawnService.vala',
)

core_utils_sources += files(
  'Process.Spawn.Sync.vala',
  'Process.Spawn.WithPipes.vala',
  'Process.Spawn.build_spawn_args.vala',
)

core_sources += core_utils_sources