core_utils_sources = []

core_utils_sources += files(
  'utils/MakeFileCopyFromURI.vala',
  'Time.FormatSeconds.vala',
)

core_utils_sources += files(
  'ArrayList.Diff.vala',
  'ArrayListString.vala',
  'ArrayList.vala',
)

core_utils_sources += files(
  'CoreServices.vala',
  'ProcessSpawnService.vala',
  'Process.Spawn.build_spawn_args.vala',
)

core_sources += core_utils_sources