core_media_controller_sources = []

core_media_controller_sources += files(
  'SingleInfo.FromURL.vala',
  'SingleInfo.Struct.Lexer.vala',
  'SingleInfo.Struct.vala',
)

core_media_controller_sources += files(
  'ValidateRequest.FromURL.vala',
  'ValidateRequest.Struct.Lexer.vala',
  'ValidateRequest.Struct.vala',
)
